--- a/ckanext/tess/templates/package/snippets/info.html
+++ b/ckanext/tess/templates/package/snippets/info.html
@@ -18,14 +18,15 @@ Example:
               <h1 class="heading">{{ pkg.title or pkg.name }}</h1>
             {% endblock %}
             {% block nums %}
-              <div class="nums">
-                <dl>
-                  <dt>{{ _('Followers') }}</dt>
-                  <dd>{{ h.SI_number_span(h.get_action('dataset_follower_count', {'id': pkg.id})) }}</dd>
-                </dl>
-              </div>
+              <!--<div class="nums">-->
+                <!--<dl>-->
+                  <!--<dt>{{ _('Followers') }}</dt>-->
+                  <!--<dd>{{ h.SI_number_span(h.get_action('dataset_follower_count', {'id': pkg.id})) }}</dd>-->
+                <!--</dl>-->
+              <!--</div>-->
             {% endblock %}
             {% block follow_button %}
+            {% set hide_follow_button = True %}
               {% if not hide_follow_button %}
                 <div class="follow_button">
                   {{ h.follow_button('dataset', pkg.name) }}
