--- a/ckanext/tess/templates/package/snippets/package_form.html
+++ b/ckanext/tess/templates/package/snippets/package_form.html
@@ -4,10 +4,15 @@
 
 {# This provides a full page that renders a form for adding a dataset. It can
 then itself be extended to add/remove blocks of functionality. #}
+
 <form id="dataset-edit" class="dataset-form form-horizontal" method="post" action="{{ action }}" data-module="basic-form">
-  {% block stages %}
-    {{ h.snippet('package/snippets/stages.html', stages=stage) }}
-  {% endblock %}
+
+    {% block stages %}
+    {# h.snippet('package/snippets/stages.html', stages=stage) #}
+    <h1 class="page-heading">
+        Create training material
+    </h1>
+    {% endblock %}
 
   <input type="hidden" name="_ckan_phase" value="dataset_new_1" />
   {# pkg_name used in 3 stage edit #}
