Chaged table headers for dataset and rsource tables.

--- a/ckanext/tess/templates/package/resource_read.html
+++ b/ckanext/tess/templates/package/resource_read.html
@@ -94,8 +94,8 @@
           <table class="table table-striped table-bordered table-condensed" data-module="table-toggle-more">
             <thead>
               <tr>
-                <th scope="col">{{ _('Field') }}</th>
-                <th scope="col">{{ _('Value') }}</th>
+                <th scope="col" style="background-color: #8CA0A6; color: white;">{{ _('Field') }}</th>
+                <th scope="col" style="background-color: #8CA0A6; color: white;">{{ _('Value') }}</th>
               </tr>
             </thead>
             <tbody>
