--- a/ckanext/tess/templates/package/snippets/additional_info.html
+++ b/ckanext/tess/templates/package/snippets/additional_info.html
@@ -3,8 +3,8 @@
   <table class="table table-striped table-bordered table-condensed">
     <thead>
       <tr>
-        <th scope="col">{{ _('Field') }}</th>
-        <th scope="col">{{ _('Value') }}</th>
+        <th scope="col" style="background-color: #8CA0A6; color: white;">{{ _('Field') }}</th>
+        <th scope="col" style="background-color: #8CA0A6; color: white;">{{ _('Value') }}</th>
       </tr>
     </thead>
     <tbody>
