--- a/ckanext/tess/templates/workflow/snippets/display_workflow.html
+++ b/ckanext/tess/templates/workflow/snippets/display_workflow.html
@@ -5,8 +5,8 @@
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-<script type="text/javascript" src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.js"></script>
-<script type="text/javascript" src="https://rawgit.com/bdparrish/cytoscape.js-toolbar/master/cytoscape-toolbar.js"></script>
+<script type="text/javascript" src="/cytoscape.js"></script>
+<script type="text/javascript" src="/cytoscape-toolbar.js"></script>
 <link type="text/css" href="/workflows-cytoscape.css" rel="stylesheet"/>
 <link type="text/css" href="/font-awesome-4.0.3/css/font-awesome.css" rel="stylesheet"/>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
