Tweaks to dataset resource form.

--- a/ckanext/tess/templates/package/snippets/resource_help.html
+++ b/ckanext/tess/templates/package/snippets/resource_help.html
@@ -1,7 +1,6 @@
 <section class="module module-narrow module-shallow">
   <h2 class="module-heading"><i class="icon-info-sign"></i> {{ _('What\'s a resource?') }}</h2>
   <div class="module-content">
-    <p>{{ _('A resource can be any document containing information relevant for this training. First and foremost, you should provide
-        a link to the actual training material. You can also add any number of auxiliary or related resources.') }}</p>
+    <p>{{ _('A resource can be any related documentation, tool, service, software, etc. that is relevant for the training material. You can add any number of resources per training material.') }}</p>
   </div>
 </section>
