--- a/ckanext/tess/templates/package/snippets/resource_form.html
+++ b/ckanext/tess/templates/package/snippets/resource_form.html
@@ -17,13 +17,6 @@
   <input name="id" value="{{ data.id }}" type="hidden"/>
 
   {% block basic_fields %}
-    {% block basic_fields_url %}
-      {% set is_upload = (data.url_type == 'upload') %}
-        {# Originally - is_upload_enabled=h.uploads_enabled() - Set to False though to prevent file upload #}
-      {{ form.image_upload(data, errors, field_url='url', field_upload='upload', field_clear='clear_upload',
-         is_upload_enabled=False, is_url=data.url and not is_upload, is_upload=is_upload,
-         upload_label=_('File'), url_label=_('URL')) }}
-    {% endblock %}
 
     {% block basic_fields_name %}
       {{ form.input('name', id='field-name', label=_('Name'), placeholder=_('eg. Introduction to 3D-Structure Visualization'), value=data.name, error=errors.name, classes=['control-full']) }}
@@ -33,12 +26,20 @@
       {{ form.markdown('description', id='field-description', label=_('Description'), placeholder=_('Some useful notes about the data'), value=data.description, error=errors.description) }}
     {% endblock %}
 
+    {% block basic_fields_url %}
+      {% set is_upload = (data.url_type == 'upload') %}
+        {# Originally - is_upload_enabled=h.uploads_enabled() - Set to False though to prevent file upload #}
+      {{ form.image_upload(data, errors, field_url='url', field_upload='upload', field_clear='clear_upload',
+         is_upload_enabled=False, is_url=data.url and not is_upload, is_upload=is_upload,
+         upload_label=_('File'), url_label=_('URL')) }}
+    {% endblock %}
+
     {% block basic_fields_format %}
       {% set format_attrs = {'data-module': 'autocomplete', 'data-module-source': '/api/2/util/resource/format_autocomplete?incomplete=?'} %}
       {% call form.input('format', id='field-format', label=_('Format'), placeholder=_('eg. HTML, CSV, XML or JSON'), value=data.format, error=errors.format, classes=['control-medium'], attrs=format_attrs) %}
         <span class="info-block info-block-small" style="padding-left: 0px;">
           <i class="icon-info-sign"></i>
-          {{ _('Use "HTML" when linking to resources or leave blank.') }}
+          {{ _('E.g. use "HTML" when linking to Web pages. You can also leave it blank.') }}
         </span>
       {% endcall %}
     {% endblock %}
