Small tweak to resource text.

--- a/ckanext/tess/templates/package/snippets/resource_help.html
+++ b/ckanext/tess/templates/package/snippets/resource_help.html
@@ -1,6 +1,7 @@
 <section class="module module-narrow module-shallow">
   <h2 class="module-heading"><i class="icon-info-sign"></i> {{ _('What\'s a resource?') }}</h2>
   <div class="module-content">
-    <p>{{ _('A resource can be any related documentation, tool, service, software, etc. that is relevant for the training material. You can add any number of resources per training material.') }}</p>
+      <p>A resource can be any related documentation, tool, service, software, etc. that is relevant for the training material.</p>
+      <p>You can add any number of resources per training material.</p>
   </div>
 </section>
