Small tweak to wf definition text.

--- a/ckanext/tess/templates/workflow/snippets/helper.html
+++ b/ckanext/tess/templates/workflow/snippets/helper.html
@@ -5,17 +5,13 @@
     </h2>
     <div class="module-content">
         <p>
-            {% trans %}
-            Training workflows are collections of training materials
-            that people need to familiarise themselves with in order to
-            learn about a certain analysis or process, e.g. structure prediction, homology modelling,
-            protein ligand docking, MS-based metabolomic analysis, etc.
+            Training workflow is a visual representation of a collection of training materials. Workflows represent
+            one way of navigating through the training materials available in TeSS, as workflow nodes represent links
+            to training materials.
         </p>
         <p>
-            Similar to steps in the actual analysis, these collections of materials
-            are organized in a particular order, so people can follow this predefined order
-            or can skip steps they are already familiar with and dive into steps they want to learn more about.
-            {% endtrans %}
+            For example, you can use workflows to represent teaching courses or complex training flowcharts that people can
+            follow in order to learn about a particular analysis.
         </p>
     </div>
 </div>
