--- a/ckanext/tess/templates/workflow/index.html
+++ b/ckanext/tess/templates/workflow/index.html
@@ -16,10 +16,19 @@
           </div>
         {# endif #}
       {% endblock %}
+      {% if not c.workflows: %}
+        <p class="empty">
+        {{ _('There are currently no workflows') }}.
+         {% if h.check_access('workflow_create') %}
+          {% link_for _('How about creating one?'), controller='ckanext.tess.workflow:WorkflowController', action='new' %}</a>
+        {% endif %}
+      </p>
+        </p>
+      {% else %}
         <div>
-            Have a look at some training workflow examples:
             {% snippet "workflow/snippets/workflow_list.html", workflows=c.workflows %}
         </div>
+      {% endif %}
     </div>
   </section>
 {% endblock %}
