--- a/ckanext/tess/templates/workflow/read.html
+++ b/ckanext/tess/templates/workflow/read.html
@@ -8,11 +8,10 @@
 {% endblock %}
 
 {% block content_action %}
-  {#% if h.check_access('workflow_update', {'id': c.workflow_dict.id}) %#}
+  {% if h.check_access('workflow_update', {'id': c.workflow_dict.id}) %}
     {% link_for _('Manage'), controller='ckanext.tess.workflow:WorkflowController', action='update', id=c.workflow_dict.id, class_='btn', icon='wrench' %}
-  {#% endif %#}
+  {% endif %}
 {% endblock %}
-
 
 {% block content_primary_nav %}
   {{ h.build_nav_icon('workflow_read', _('Workflow'), id=c.workflow_dict.name) }}
