--- a/ckanext/tess/templates/workflow/edit.html
+++ b/ckanext/tess/templates/workflow/edit.html
@@ -9,9 +9,10 @@
 {% endblock %}
 
 {% block content_action %}
+<div style="margin-bottom: 13px;">
     {% link_for _('View'), controller='ckanext.tess.workflow:WorkflowController', action='read', id=c.workflow_dict.id, class_='btn', icon='eye-open' %}
+</div>
 {% endblock %}
-
 
 {% block primary_content_inner %}
     {% if c.workflow_dict.definition %}
