--- a/ckanext/tess/templates/workflow/snippets/workflow-property-editor.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow-property-editor.html
@@ -14,7 +14,7 @@
             {{ form.input('color', label=_('Colour'), id='element-color', placeholder=_('#FE23A9 or Yellow'), classes=['control-full']) }}
             {{ form.select('topic', label=_('Topic'), options=[{'value':'Topic 1'},{'value':'Topic 2'},{'value':'Topic 3'}], selected='Topic 1', id='element-topic', classes=['control-full']) }}
         </div>
-        <button class="btn btn-primary pull-right" id="save_workflow_element_properties" type="submit" style="margin-top: 10px;"><i class="icon-delete"></i> Save properties</button>
+        <button class="btn btn-primary pull-right" id="save_workflow_element_properties" type="submit" style="margin-top: 10px;"><i class="icon-delete"></i> Apply</button>
         </div>
     </div>
 </div>
