Some upper and lowercase tweaks.

--- a/ckanext/tess/templates/package/read_base.html
+++ b/ckanext/tess/templates/package/read_base.html
@@ -25,7 +25,7 @@
 {% block content_primary_nav %}
 {{ h.build_nav_icon('dataset_read', _('Training material'), id=pkg.name) }}
 {{ h.build_nav_icon('dataset_groups', _('Package'), id=pkg.name) }}
-{{ h.build_nav_icon('dataset_activity', _('Activity Stream'), id=pkg.name) }}
+{{ h.build_nav_icon('dataset_activity', _('Activity log'), id=pkg.name) }}
 {% endblock %}4
 
 {% block primary_content_inner %}
