Added export as PNG and export as JSON options

--- a/ckanext/tess/fantastic/tess.css
+++ b/ckanext/tess/fantastic/tess.css
@@ -557,6 +557,12 @@ hr.style-one {
   );
 }
 
+.wf-textarea{
+    width:100%;
+    height: 500px;
+}
+
+
 #workflow_element_info{
 	background-color:white;
 	border:1px solid lightgray;
