Added explanation for 'Add child node' tool to wf creation guide.

--- a/ckanext/tess/templates/workflow/snippets/workflow-creation-guide.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow-creation-guide.html
@@ -16,6 +16,8 @@
                 <li>Click on <i class="fa fa-plus"></i> in the toolbar to select the <em>Add node</em> tool</li>
                 <li>Create nodes on the graph by clicking on points in the diagram
                     while <i class="fa fa-plus"></i> is 'on'</li>
+                <li>To create a child node, select the <em>Add child node</em> tool <i class="fa fa-plus-square"></i>
+                    and then click on a parent node in the diagram where you want to add a child to</li>
                 <li>Click on <i class="fa fa-link"></i> in the toolbar to select the <em>Link tool</em></li>
                 <li>While the <i class="fa fa-link"></i> tool is 'on', click on
                     the nodes in the graph: the first node you select will be the source of the link,
