--- a/ckanext/tess/templates/workflow/snippets/workflow-property-editor.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow-property-editor.html
@@ -9,12 +9,16 @@
     <div style="padding: 0 5px;" class="module-content">
         <p id="no_workflow_element_selected" class="empty" style="padding: 10px;">No workflow element selected</p>
         <div id="workflow_element_info" style="position: initial;">
+            <div class="control-group control-full" style="margin-bottom: 0px;">
+                <label class="control-label" for="element-type">Type</label>
+                <div id="element-type" class="controls" style="background-color: #8CA0A6; color: white; font-weight: bold;"></div>
+            </div>
             <div>
-            {{ form.input('title', label=_('Name'), id='element-name', placeholder=_('Element name'), classes=['control-full']) }}
-            {{ form.input('color', label=_('Colour'), id='element-color', placeholder=_('#FE23A9 or Yellow'), classes=['control-full']) }}
-            {{ form.select('train-mat', label=_('Training Material'),
+            {{ form.input('title', label=_('Name'), id='element-name', placeholder=_('Element name'), classes=['control-full margin-bottom-0']) }}
+            {{ form.input('color', label=_('Colour'), id='element-color', placeholder=_('#FE23A9 or Yellow'), classes=['control-full margin-bottom-0']) }}
+            {{ form.select('train-mat', label=_('Training material'),
                 options=h.training_material_options(),
-                id='element-train-mat', classes=['control-full']) }}
+                id='element-train-mat', classes=['control-full margin-bottom-0']) }}
             {{ form.select('topic', label=_('Topic'), id='element-topic', options=[{'value':'Topic 1'},{'value':'Topic 2'},{'value':'Topic 3'}], selected='Topic 1', classes=['control-full']) }}
         </div>
         <button class="btn btn-primary pull-right" id="save_workflow_element_properties" type="submit" style="margin-top: 10px;"><i class="icon-delete"></i> Apply</button>
