--- a/ckanext/tess/templates/workflow/snippets/export_options.html
+++ b/ckanext/tess/templates/workflow/snippets/export_options.html
@@ -1,4 +1,4 @@
-<button class="btn btn-primary pull-right" id='download-json-workflow' name="download-json" type="submit"><i class="icon-download"></i> Download JSON</button>
-<button class="btn btn-primary pull-right" id='download-png-workflow' name="download-png" type="submit"><i class="icon-download"></i> Download PNG</button>
-<img id="png" style="display:none"/>
+<button class="btn btn-primary pull-right" id='download-json-workflow' name="download-json" type="submit" style="margin: 0px 5px;"><i class="icon-download"></i> Download JSON</button>
+<button class="btn btn-primary pull-right" id='download-png-workflow' name="download-png" type="submit" style="margin: 0px 5px;"><i class="icon-download"></i> Download PNG</button>
+<img id="png" style="display:none; border: 1px solid black;"/>
 <textarea id="json-wf" class="wf-textarea" style="display:none"></textarea>
