Renamed 'activity stream' -> 'activity log'.

--- a/ckanext/tess/templates/user/read_base.html
+++ b/ckanext/tess/templates/user/read_base.html
@@ -21,7 +21,7 @@
 
 {% block content_primary_nav %}
   {{ h.build_nav_icon('user_datasets', _('Training materials'), id=user.name) }}
-  {{ h.build_nav_icon('user_activity_stream', _('Activity Stream'), id=user.name) }}
+  {{ h.build_nav_icon('user_activity_stream', _('Activity log'), id=user.name) }}
 {% endblock %}
 
 {% block secondary_content %}
