--- a/ckanext/tess/templates/group/read_base.html
+++ b/ckanext/tess/templates/group/read_base.html
@@ -9,6 +9,6 @@
 
 {% block content_primary_nav %}
   {{ h.build_nav_icon('group_read', _('Training materials'), id=c.group_dict.name) }}
-  {{ h.build_nav_icon('group_activity', _('Activity Stream'), id=c.group_dict.name, offset=0) }}
+  {{ h.build_nav_icon('group_activity', _('Activity log'), id=c.group_dict.name, offset=0) }}
   {{ h.build_nav_icon('group_about', _('About'), id=c.group_dict.name) }}
 {% endblock %}
