--- a/ckanext/tess/templates/organization/read_base.html
+++ b/ckanext/tess/templates/organization/read_base.html
@@ -15,7 +15,7 @@
 
 {% block content_primary_nav %}
   {{ h.build_nav_icon('organization_read', _('Training materials'), id=c.group_dict.name) }}
-  {{ h.build_nav_icon('organization_activity', _('Activity Stream'), id=c.group_dict.name) }}
+  {{ h.build_nav_icon('organization_activity', _('Activity log'), id=c.group_dict.name) }}
   {{ h.build_nav_icon('organization_about', _('About'), id=c.group_dict.name) }}
 {% endblock %}
 
