Polishing off the various terminilogy and definitions.

--- a/ckanext/tess/templates/group/snippets/helper.html
+++ b/ckanext/tess/templates/group/snippets/helper.html
@@ -6,7 +6,7 @@
   <div class="module-content">
     <p>
       {% trans %}
-        Packages are collections of training materials that, for example, share a common purpose.
+        Packages are arbitrary collections of training materials that, for example, share a common purpose.
       {% endtrans %}
     </p>
   </div>
