--- a/ckanext/tess/templates/organization/snippets/help.html
+++ b/ckanext/tess/templates/organization/snippets/help.html
@@ -7,7 +7,7 @@
     {% trans %}
       <p>
 	Content providers are organizations (real or virtual) that provide
-      	or link to training material. TeSS is fed by content from training
+      	or link to training materials. TeSS is fed by content from training
 	portals, such as GOBLET, ELIXIR nodes' own training material, 
 	foundation organisations, such as Software and Data Carpentry, etc. 
      </p>
