--- a/ckanext/tess/templates/workflow/snippets/helper.html
+++ b/ckanext/tess/templates/workflow/snippets/helper.html
@@ -5,13 +5,13 @@
     </h2>
     <div class="module-content">
         <p>
-            Training workflow is a visual representation of a collection of training materials. Workflows represent
-            one way of navigating through the training materials available in TeSS, as workflow nodes represent links
-            to training materials.
+            Training workflow is a visual representation of a collection of training materials and give
+            one way of navigating through the available training.
         </p>
         <p>
-            For example, you can use workflows to represent teaching courses or complex training flowcharts that people can
-            follow in order to learn about a particular analysis.
+            For example, you can use workflows to represent a step-by-step breakdown of typical stages of some kind of
+            data analysis (e.g., a protein sequence analysis pipeline, structure analysis protocol, etc.), where each node
+            in the workflow represents an analysis step and links to the relevant training resources.
         </p>
     </div>
 </div>
