Added records for creator, created at time and modified time

--- a/ckanext/tess/templates/workflow/snippets/workflow_item.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow_item.html
@@ -16,4 +16,6 @@
     <a href="{{ link }}" title="View {{workflow.name}}" class="media-view">
         <span>"View {{workflow.name}}"</span>
     </a>
+    Created by {{workflow.creator}} {{workflow.created}}
+    <i>last modified {{workflow.modified}}</i>
 </li>
