--- a/ckanext/tess/templates/workflow/snippets/workflow_item.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow_item.html
@@ -16,6 +16,7 @@
     <a href="{{ link }}" title="View {{workflow.name}}" class="media-view">
         <span>"View {{workflow.name}}"</span>
     </a>
-    Created by {{workflow.creator}} {{workflow.created}}
-    <i>last modified {{workflow.modified}}</i>
+    {% if workflow.creator %}
+        <p><i>Created by {{workflow.creator}}</i></p>
+    {% endif %}
 </li>
