--- a/ckanext/tess/templates/workflow/snippets/display_workflow_info.html
+++ b/ckanext/tess/templates/workflow/snippets/display_workflow_info.html
@@ -1,6 +1,6 @@
 
 {% import 'macros/form.html' as form %}
-{% if action=='new' %}
+{% if action=='new' or action=='new-errors' %}
     {% set action_url = h.url_for('workflow_new') %}
 {% elif action=='edit' %}
     {% set action_url = h.url_for('workflow_update', id=workflow.id) %}
@@ -10,7 +10,7 @@
 
     <div class="form-actions" style="border-top: 0px; padding-top: 0px;">
           {% block basic_fields %}
-            {% if action == 'edit' %}
+            {% if action == 'edit' or action=='new-errors' %}
                 {{ form.input('title', label=_('Name'), id='field-name', value=workflow.name, classes=['control-full']) }}
                 {{ form.markdown('description', label=_('Description'), id='field-description', value=workflow.description, placeholder=_('A little information about workflow...'), error=None) }}
             {% else %}
@@ -23,7 +23,7 @@
             {% if h.check_access('workflow_create')  %}
                 <button class="btn btn-primary pull-right" id='save-workflow' name="save" type="submit"><i class="icon-save"></i> Save workflow</button>
             {% endif %}
-            {% if action == 'edit' %}
+            {% if action == 'edit'%}
                 {% if h.check_access('workflow_delete', {'id': workflow.id} )  %}
                     {% set locale = h.dump_json({'content': _('Are you sure you want to delete this workflow?')}) %}
                     <a href="{% url_for controller='ckanext.tess.workflow:WorkflowController',
