--- a/ckanext/tess/templates/header.html
+++ b/ckanext/tess/templates/header.html
@@ -97,7 +97,7 @@
                     {% block header_site_navigation_tabs %}
                     {{ h.build_nav_main(
                     ('node', _('Nodes')),
-                    ('search', _('Training Materials')),
+                    ('search', _('Materials')),
                     ('group_index', _('Packages')),
                     ('workflow', _('Workflows')),
                     ('event', _('Events')),
