Renamed training materials -> materials as agreed on TeSS meeting 2015-06-01 in London.

--- a/ckanext/tess/templates/package/base_form_page.html
+++ b/ckanext/tess/templates/package/base_form_page.html
@@ -3,12 +3,13 @@
 {% block secondary_content %}
   {% block info_module %}
     <section class="module module-narrow module-shallow">
-      <h2 class="module-heading"><i class="icon-info-sign"></i> {{ _('What are training materials?') }}</h2>
+      <h2 class="module-heading"><i class="icon-info-sign"></i> {{ _('What is material?') }}</h2>
       <div class="module-content">
         <p>
           {% trans %}
-          A training material is a link to an original training resource, such as a Web page, text, presentation, video, document, dataset, course, etc.
-          together with a description and other meta information.
+          A material is a link to a single online training material sourced by a content provider,
+            such as a text on a Web page, presentation, video, document, etc.,
+            along with description and other meta information (e.g. ontological categorization, keywords, etc.)
           {% endtrans %}
         </p>
       </div>
