--- a/ckanext/tess/templates/package/snippets/new_package_breadcrumb.html
+++ b/ckanext/tess/templates/package/snippets/new_package_breadcrumb.html
@@ -1,2 +1,2 @@
-<li>{% link_for _('Training materials'), controller='package', action='search', highlight_actions = 'new index' %}</li>
-<li class="active">{% link_for _('Create training material'), controller='package', action='new' %}</li>
+<li>{% link_for _('Materials'), controller='package', action='search', highlight_actions = 'new index' %}</li>
+<li class="active">{% link_for _('Register material'), controller='package', action='new' %}</li>
