--- a/ckanext/tess/templates/package/snippets/package_form.html
+++ b/ckanext/tess/templates/package/snippets/package_form.html
@@ -10,7 +10,7 @@ then itself be extended to add/remove blocks of functionality. #}
     {% block stages %}
     {# h.snippet('package/snippets/stages.html', stages=stage) #}
     <h1 class="page-heading">
-        Create training material
+        Register material
     </h1>
     {% endblock %}
 
