--- a/ckanext/tess/templates/package/snippets/stages.html
+++ b/ckanext/tess/templates/package/snippets/stages.html
@@ -20,7 +20,7 @@ Example:
 <ol class="stages {{ class }}">
   <li class="first {{ s1 }}">
     {% if s1 != 'complete' %}
-      <span class="highlight">{{ _('Create training material') }}</span>
+      <span class="highlight">{{ _('Register material') }}</span>
     {% else %}
       <button class="highlight" name="save" value="go-dataset" type="submit">{{ _('Create training material') }}</button>
     {% endif %}
