--- a/ckanext/tess/templates/package/group_list.html
+++ b/ckanext/tess/templates/package/group_list.html
@@ -11,7 +11,7 @@
           <option value="{{ option[0] }}"> {{ option[1] }}</option>
         {% endfor %}
       </select>
-      <button type="submit" class="btn btn-primary" title="{{ _('Associate this group with this training material') }}">{{ _('Add to package') }}</button>
+      <button type="submit" class="btn btn-primary" title="{{ _('Associate this package with this material') }}">{{ _('Add to package') }}</button>
     </form>
   {% endif %}
 
@@ -20,7 +20,7 @@
       {% snippet 'group/snippets/group_list.html', groups=c.pkg_dict.groups %}
     </form>
   {% else %}
-    <p class="empty">{{ _('There are no packages associated with this training material') }}</p>
+    <p class="empty">{{ _('There are no packages associated with this material') }}</p>
   {% endif %}
 
 {% endblock %}
