--- a/ckanext/tess/templates/package/new.html
+++ b/ckanext/tess/templates/package/new.html
@@ -1,3 +1,3 @@
 {% ckan_extends %}
 
-{% block subtitle %}{{ _('Create training material') }}{% endblock %}
+{% block subtitle %}{{ _('Register material') }}{% endblock %}
