--- a/ckanext/tess/templates/package/resource_read.html
+++ b/ckanext/tess/templates/package/resource_read.html
@@ -68,9 +68,9 @@
               {{ h.render_markdown(res.description) }}
             {% endif %}
             {% if not res.description and c.package.notes %}
-              <h3>{{ _("From training material's abstract") }}</h3>
+              <h3>{{ _("From the material's abstract") }}</h3>
               <blockquote>{{ h.markdown_extract(c.package.get('notes')) }}</blockquote>
-              <p>{% trans dataset=c.package.title, url=h.url_for(controller='package', action='read', id=c.package['name']) %}Training material: <a href="{{ url }}">{{ dataset }}</a>{% endtrans %}
+              <p>{% trans dataset=c.package.title, url=h.url_for(controller='package', action='read', id=c.package['name']) %}Material: <a href="{{ url }}">{{ dataset }}</a>{% endtrans %}
             {% endif %}
           </div>
         {% endblock %}
@@ -116,7 +116,7 @@
                 <td>{% snippet "snippets/license.html", pkg_dict=pkg, text_only=True %}</td>
               </tr>
               {% for key, value in h.format_resource_items(res.items()) %}
-                <tr class="toggle-more"><th scope="row">{{ key.replace('package', 'training material', 1) }}</th><td>{{ value }}</td></tr>
+                <tr class="toggle-more"><th scope="row">{{ key.replace('package', 'material', 1) }}</th><td>{{ value }}</td></tr>
               {% endfor %}
             </tbody>
           </table>
