--- a/ckanext/tess/templates/package/resources.html
+++ b/ckanext/tess/templates/package/resources.html
@@ -9,7 +9,7 @@
     </ul>
   {% else %}
     {% trans url=h.url_for(controller='package', action='new_resource', id=pkg.name) %}
-      <p class="empty">This training material has no additional resources, <a href="{{ url }}">why not add some?</a></p>
+      <p class="empty">This material has no additional resources, <a href="{{ url }}">why not add some?</a></p>
     {% endtrans %}
   {% endif %}
 {% endblock %}
