Tidied up front page, got rid of stale questionairre flash message.

--- a/ckanext/tess/templates/home/snippets/nodes_button.html
+++ b/ckanext/tess/templates/home/snippets/nodes_button.html
@@ -1,17 +1,17 @@
 <div class="module module-nodes module-narrow module-shallow box homepage-button-div" style="border: 1px solid #CECECE; padding: 0px;">
     <div class="homepage-button-content">
     <a href="/node"><span class="homepage-button"></span></a>
-        <h2 class="heading">{{ _("ELIXIR Nodes") }}</h2>
+        <h3 class="heading">{{ _("ELIXIR Nodes") }}</h3>
         <div>
             <p>
-                TeSS aims to provide an at-a-glance view of <a style="position:relative; z-index: 10;" href="http://elixir-europe.org">ELIXIR</a> training
-                landscape, while also offering individual ’shop windows’, giving customisable views of the hottest
+                TeSS aims to provide an at-a-glance view of <a style="position:relative; z-index: 10;" href="http://elixir-europe.org">ELIXIR's</a> training
+                landscape, while also offering individual ’shop windows’, giving customisable views of the hottest training
                 news, events, activity highlights, etc. from <a style="position:relative; z-index: 10;" href="/node">nodes</a>.
             </p>
-            <p>
-                For TeSS to offer the functionality you consider most important, please complete the following
-                <a style="position:relative; z-index: 10;" href="http://goo.gl/forms/QKt7qjL10G">questionnaire</a> with the kinds of questions you would like TeSS to answer.
-            </p>
+            <!--<p>-->
+                <!--For TeSS to offer the functionality you consider most important, please complete the following-->
+                <!--<a style="position:relative; z-index: 10;" href="http://goo.gl/forms/QKt7qjL10G">questionnaire</a> with the kinds of questions you would like TeSS to answer.-->
+            <!--</p>-->
         </div>
     </div>
 </div>
