--- a/ckanext/tess/templates/home/snippets/training_materials_button.html
+++ b/ckanext/tess/templates/home/snippets/training_materials_button.html
@@ -1,9 +1,9 @@
 <div class="module module-button module-narrow module-shallow box homepage-button-div">
     <div class="homepage-button-content">
         <a href="/dataset"><span class="homepage-button"></span></a>
-        <h3 class="heading">{{ _("Training materials") }}</h3>
+        <h3 class="heading">{{ _("Materials") }}</h3>
         <div>
-            Browse the catalogue of materials offered by ELIXIR Nodes and 3d-party providers.
+            Browse the catalogue of materials offered by ELIXIR nodes and 3<sup>rd</sup> party providers.
         </div>
     </div>
 </div>
