--- a/ckanext/tess/templates/home/layout1.html
+++ b/ckanext/tess/templates/home/layout1.html
@@ -1,13 +1,13 @@
 <!--
-{{ h.flash_notice('Please help us shape TeSS to your needs by filling in this <a href="http://goo.gl/forms/QKt7qjL10G">questionnaire</a>.', allow_html=True) }}
+{# h.flash_notice('Please help us shape TeSS to your needs by filling in this <a href="http://goo.gl/forms/QKt7qjL10G">questionnaire</a>.', allow_html=True) #}
 -->
 <div role="main" class="hero">
     <div class="container container-home">
         <div class="row row1" style="/*padding-bottom:10px; border-bottom-style: solid; border-width: 1px; border-color: #CECECE;*/">
             <div class="span6-homepage col1">
-                {% snippet 'home/snippets/promoted.html' %}
+                {% snippet 'home/snippets/welcome.html' %}
             </div>
-            <div class="span6-homepage col2">
+            <div class="span6-homepage col2" style="position: static;">
                 {# snippet 'home/snippets/search.html' #}
                 <div>
                     {% snippet 'home/snippets/nodes_button.html' %}
@@ -36,15 +36,15 @@
 </div>
 <div role="main">
     <div class="container container-home">
-        <div class="row row2">
-            <div class="span6-homepage col1">
-                {% snippet 'home/snippets/latest_news.html' %}
-                {# snippet 'home/snippets/featured_group.html' #}
-            </div>
-            <div class="span6-homepage col2">
-                {# snippet 'home/snippets/featured_organization.html' #}
-                {% snippet 'home/snippets/latest_activity.html' %}
-            </div>
-        </div>
+        <!--<div class="row row2">-->
+            <!--<div class="span6-homepage col1">-->
+                <!--{#% snippet 'home/snippets/latest_news.html' %#}-->
+                <!--{# snippet 'home/snippets/featured_group.html' #}-->
+            <!--</div>-->
+            <!--<div class="span6-homepage col2">-->
+                <!--{# snippet 'home/snippets/featured_organization.html' #}-->
+                <!--{#% snippet 'home/snippets/latest_activity.html' %#}-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
 </div>
