Tidying up terminilogy.

--- a/ckanext/tess/templates/group/snippets/helper.html
+++ b/ckanext/tess/templates/group/snippets/helper.html
@@ -6,7 +6,8 @@
   <div class="module-content">
     <p>
       {% trans %}
-        Packages are arbitrary collections of training materials that, for example, share a common purpose.
+        Packages are arbitrary collections of training materials that, for example, share a common purpose or
+        address your particular research topic.
       {% endtrans %}
     </p>
   </div>
