--- a/ckanext/tess/templates/organization/snippets/helper.html
+++ b/ckanext/tess/templates/organization/snippets/helper.html
@@ -7,10 +7,13 @@
     {% trans %}
       <p>
         Content providers are organizations (real or virtual) that provide
-        or link to training materials. TeSS is fed by content from training
-        portals, such as GOBLET, ELIXIR nodes' own training material,
-        foundation organisations, such as Software and Data Carpentry, etc.
+        training materials.
      </p>
+      <p>
+           TeSS is aggregating content from training
+        portals, such as GOBLET, ELIXIR nodes,
+        foundation organisations, such as the Software and Data Carpentry, etc.
+      </p>
     {% endtrans %}
   </div>
 </div>
