--- a/ckanext/tess/templates/workflow/snippets/helper.html
+++ b/ckanext/tess/templates/workflow/snippets/helper.html
@@ -5,8 +5,9 @@
     </h2>
     <div class="module-content">
         <p>
-            Training workflow is a visual representation of a collection of training materials and give
-            one way of navigating through the available training.
+            Training workflow is a visual representation of a collection of training materials that can help
+            navigating through the available resources specific to your research and training needs.
+
         </p>
         <p>
             For example, you can use workflows to represent a step-by-step breakdown of typical stages of some kind of
