--- a/ckanext/tess/templates/group/snippets/info.html
+++ b/ckanext/tess/templates/group/snippets/info.html
@@ -27,21 +27,21 @@
     {% endblock %}
     {% if show_nums %}
       {% block nums %}
-      <div class="nums">
-        <dl>
-          <dt>{{ _('Followers') }}</dt>
-          <dd>{{ h.SI_number_span(group.num_followers) }}</dd>
-        </dl>
-        <dl>
-          <dt>{{ _('Training materials') }}</dt>
-          <dd>{{ h.SI_number_span(group.package_count) }}</dd>
-        </dl>
-      </div>
+      <!--<div class="nums">-->
+        <!--<dl>-->
+          <!--<dt>{#{ _('Followers') }#}</dt>-->
+          <!--<dd>{#{ h.SI_number_span(group.num_followers) }#}</dd>-->
+        <!--</dl>-->
+        <!--<dl>-->
+          <!--<dt>{#{ _('Training materials') }#}</dt>-->
+          <!--<dd>{#{ h.SI_number_span(group.package_count) }#}</dd>-->
+        <!--</dl>-->
+      <!--</div>-->
       {% endblock %}
       {% block follow %}
-      <div class="follow_button">
-        {{ h.follow_button('group', group.id) }}
-      </div>
+      <!--<div class="follow_button">-->
+        <!--{#{ h.follow_button('group', group.id) }#}-->
+      <!--</div>-->
       {% endblock %}
     {% endif %}
     {% endblock %}
